# local_pigeon

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  install.ps1  install.sh  pyproject.toml  requirements.txt
docs/: configuration.md  getting-started.md  index.md  troubleshooting.md
evals/: __init__.py  tool_usage.py
src/local_pigeon/: __init__.py  __main__.py  cli.py  config.py  diagnostics.py  logging.py
src/local_pigeon/core/: __init__.py  agent.py  capabilities.py  conversation.py  default_tool_provider.py  grounding.py  heartbeat.py  interfaces.py  llama_cpp_client.py  llm_client.py  model_catalog.py  ralph.py  scheduler.py  skills.py
src/local_pigeon/core/networking/: __init__.py  wireguard.py
src/local_pigeon/storage/: __init__.py  credentials.py  database.py  failure_log.py  memory.py  user_settings.py
src/local_pigeon/tools/: __init__.py  memory_tools.py  registry.py  schedule_tools.py  self_healing.py  skills_tools.py
src/local_pigeon/tools/discord/: __init__.py  channels.py  messaging.py
src/local_pigeon/tools/google/: __init__.py  auth.py  calendar.py  drive.py  gmail.py
src/local_pigeon/tools/mcp/: __init__.py  adapter.py  manager.py
src/local_pigeon/tools/payments/: __init__.py  approval.py  crypto_wallet.py  stripe_card.py
src/local_pigeon/tools/web/: __init__.py  browser.py  fetch.py  search.py
src/local_pigeon/ui/: __init__.py  app.py  env_utils.py  theme.py
tests/: __init__.py  conftest.py  test_agent.py  test_browser.py  test_config.py  test_di_guard.py  test_doctor.py  test_env_utils.py  test_mcp.py  test_multi_tool.py  test_ralph_loop.py  test_scheduler_hardening.py  test_scheduler_tasks.py  test_tool_bridge.py  test_tools.py  test_ui.py
