[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-pigeon"
version = "0.4.0"
description = "Local AI agent with Discord/Telegram, Google Workspace, and payments - powered by Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tradermichael" }
]
keywords = [
    "ai-agent",
    "ollama",
    "discord",
    "telegram",
    "local-llm",
    "google-workspace",
    "payments"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core
    "ollama>=0.4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    
    # CLI & UI
    "typer>=0.12",
    "rich>=13.0",
    "gradio>=6.0",
    
    # Platforms
    "discord.py>=2.3.0",
    "aiogram>=3.0",
    
    # Google Workspace
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2.0",
    
    # Payments
    "stripe>=7.0",
    
    # Web & HTTP
    "ddgs>=7.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    
    # Storage
    "aiosqlite>=0.20",
    "cryptography>=42.0",
    
    # Config
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    
    # Voice & Browser
    "SpeechRecognition>=3.10",
    "playwright>=1.40",
    
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
]
crypto = [
    "coinbase-agentkit>=0.1",
]
voice-extras = [
    "pydub>=0.25",
]
all = [
    "coinbase-agentkit>=0.1",
    "pydub>=0.25",
]

[project.scripts]
local-pigeon = "local_pigeon.cli:main"
botf = "local_pigeon.cli:main"

[project.urls]
Homepage = "https://github.com/tradermichael/local_pigeon"
Repository = "https://github.com/tradermichael/local_pigeon"
Issues = "https://github.com/tradermichael/local_pigeon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/local_pigeon"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
